phpldapadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
  namespace: ldap
spec:
  selector:
    app: phpldapadmin
  ports:
  - port: 80
    targetPort: 80
